# rust_incubator_eng

./: README.md
.github/workflows/: Step-1.yml  (+2 more)
2_idioms/: Cargo.toml
3_ecosystem/: Cargo.toml  diesel.toml
3_ecosystem/3_10_threads/: Cargo.toml
3_ecosystem/3_10_threads/src/: main.rs
3_ecosystem/3_11_async/: Cargo.toml
3_ecosystem/3_11_async/src/: file_loader.rs  main.rs
3_ecosystem/3_12_web_db/: Cargo.toml
3_ecosystem/3_12_web_db/migrations/2022-09-23-102532_create_articles/: up.sql
3_ecosystem/3_12_web_db/src/: main.rs  routes.rs
3_ecosystem/3_12_web_db/src/db/: mod.rs  models.rs  schema.rs
3_ecosystem/3_1_testing/: Cargo.toml
3_ecosystem/3_1_testing/src/: main.rs
3_ecosystem/3_2_macro/: Cargo.toml
3_ecosystem/3_2_macro/src/: lib.rs  main.rs
3_ecosystem/3_3_date_time/: Cargo.toml
3_ecosystem/3_3_date_time/src/: main.rs
3_ecosystem/3_4_regex_parsing/: Cargo.toml
3_ecosystem/3_4_regex_parsing/src/: grammar.pest  main.rs  pest_parser.rs  regex_parser.rs
3_ecosystem/3_5_collections/src/: main.rs
3_ecosystem/3_6_serde/: Cargo.toml  request.toml  request.yaml
3_ecosystem/3_6_serde/src/: main.rs
3_ecosystem/3_7_rand_crypto/: Cargo.toml
3_ecosystem/3_7_rand_crypto/src/: main.rs
3_ecosystem/3_8_log/: Cargo.toml
3_ecosystem/3_8_log/src/: main.rs
3_ecosystem/3_9_cmd_env_conf/: Cargo.toml
3_ecosystem/3_9_cmd_env_conf/src/: main.rs  settings.rs
3_ecosystem/migrations/2022-09-24-195314_create_users/: down.sql  up.sql
3_ecosystem/src/: db.rs  handlers.rs  main.rs
3_ecosystem/src/schemas/: context.rs  mod.rs  root.rs
3_ecosystem/src/schemas/user/: mod.rs  models.rs  schema.rs
(+21 files in other folders)
