[package]
name = "step_3"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-cors = "0.6.3"
actix-web = "4.2.1"
actix-web-lab = "0.18.2"
diesel = { version = "2.0.0", features = [ "r2d2", "postgres" ] }
dotenv = "0.15.0"
env_logger = "0.9.1"

juniper = "0.15.10"
log = "0.4.17"
r2d2 = "0.8.10"
serde = { version = "1.0.145", features = [ "derive" ] }
serde_json = "1.0.85"
