[package]
name = "step_3_11"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "3.2.22", features = [ "derive" ] }
indicatif = "0.17.1"
num_cpus = "1.13.1"
reqwest = { version = "0.11.12" }
tokio = { version = "1.21.1", features = [ "rt-multi-thread", "macros" ] }
