[package]
name = "step_3_12"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-web = "4.2.1"
diesel = { version = "2.0.0", features = [ "sqlite", "r2d2" ] }
dotenvy = "0.15.5"
r2d2 = "0.8.10"
serde = { version = "1.0.145", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.85"
